# gpu-image-synthesis

./: CMakeLists.txt  README.md
Assignments/: CMakeLists.txt
Assignments/A0MeshViewer/include/: TriangleApp.h
Assignments/A0MeshViewer/shaders/: TriangleMesh.hlsl
Assignments/A0MeshViewer/src/: TriangleApp.cpp  main.cpp
Assignments/first-assignment-mesh-viewer/include/: mesh-viewer.h
Assignments/first-assignment-mesh-viewer/shaders/: mesh-viewer.hlsl
Assignments/first-assignment-mesh-viewer/src/: mesh-viewer.cpp
Assignments/second-assignment-scene-graph-viewer/include/: SceneFactory.hpp
Assignments/second-assignment-scene-graph-viewer/shaders/: TriangleMesh.hlsl
Assignments/second-assignment-scene-graph-viewer/src/: AABB.cpp  Scene.cpp  SceneFactory.cpp  SceneGraphViewerApp.cpp  TriangleMeshD3D12.cpp
Tutorials/: CMakeLists.txt
Tutorials/T14ComputeShaderVectorAdd/shaders/: VectorAdd.hlsl
experiments/: CMakeLists.txt
experiments/vertex-buffer-home-alone/: CMakeLists.txt
experiments/vertex-buffer-home-alone/src/: main.cpp
first-assignment/: CMakeLists.txt
first-assignment/assignments/: CMakeLists.txt
first-assignment/assignments/first-assignment-mesh-viewer/: CMakeLists.txt
first-assignment/assignments/first-assignment-mesh-viewer/src/: main.cpp  mesh-viewer.cpp
first-assignment/data/IranianLunch/: license.txt  scene.gltf
first-assignment/data/MackRD690/: license.txt  scene.gltf
gimslib/src/gimslib/io/: CograBinaryMeshFile.cpp
second-assignment/assignments/: CMakeLists.txt
second-assignment/assignments/second-assignment-scene-graph-viewer/: CMakeLists.txt
second-assignment/assignments/second-assignment-scene-graph-viewer/include/: AABB.hpp  Scene.hpp  SceneFactory.hpp  SceneGraphViewerApp.hpp  TriangleMeshD3D12.hpp
second-assignment/assignments/second-assignment-scene-graph-viewer/shaders/: BoundingBoxComputeShader.hlsl  BoundingBoxMeshShader.hlsl  TriangleMesh.hlsl
second-assignment/assignments/second-assignment-scene-graph-viewer/src/: AABB.cpp  (+6 more)
(+1 files in other folders)
