add_subdirectory(./T00GLM)
set_target_properties (T00GLM PROPERTIES FOLDER tutorials)

add_subdirectory(./T01BasicFramework)
set_target_properties (T01BasicFramework PROPERTIES FOLDER tutorials)

add_subdirectory(./T02Triangle)
set_target_properties (T02Triangle PROPERTIES FOLDER tutorials)

add_subdirectory(./T03TwoTriangles)
set_target_properties (T03TwoTriangles PROPERTIES FOLDER tutorials)

add_subdirectory(./T04Ellipsis)
set_target_properties (T04Ellipsis PROPERTIES FOLDER tutorials)

add_subdirectory(./T05RootConstant)
set_target_properties (T05RootConstant PROPERTIES FOLDER tutorials)

add_subdirectory(./T06RootConstantBuffer)
set_target_properties (T06RootConstantBuffer PROPERTIES FOLDER tutorials)

add_subdirectory(./T07VertexBuffer)
set_target_properties (T07VertexBuffer PROPERTIES FOLDER tutorials)

add_subdirectory(./T08VertexIndexBuffer)
set_target_properties (T08VertexIndexBuffer PROPERTIES FOLDER tutorials)

add_subdirectory(./T09Texture)
set_target_properties (T09Texture PROPERTIES FOLDER tutorials)

add_subdirectory(./T10ConstantBuffer)
set_target_properties (T10ConstantBuffer PROPERTIES FOLDER tutorials)

add_subdirectory(./T11TwoConstantBuffers)
set_target_properties (T11TwoConstantBuffers PROPERTIES FOLDER tutorials)

add_subdirectory(./T12TwoTexturesOneTable)
set_target_properties (T12TwoTexturesOneTable PROPERTIES FOLDER tutorials)

add_subdirectory(./T13TwoTexturesTwoTables)
set_target_properties (T13TwoTexturesTwoTables PROPERTIES FOLDER tutorials)

add_subdirectory(./T14ComputeShaderVectorAdd)
set_target_properties (T14ComputeShaderVectorAdd PROPERTIES FOLDER tutorials)

add_subdirectory(./T15ComputeShaderWriteToRenderTarget)
set_target_properties (T15ComputeShaderWriteToRenderTarget PROPERTIES FOLDER tutorials)

add_subdirectory(./T16ComputeShaderPostProcess)
set_target_properties (T16ComputeShaderPostProcess PROPERTIES FOLDER tutorials)

